--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 <body>
   
+  <h1>To do List</h1>
+
+<section class = 'main'>
+<input type ="text" class = 'list'>
+<button class ="sub">Submit</button>
+</section>
+
+<section class ="answer">
+<ul>
 
 
+</ul>
+
+</section>
 
 
 
