--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
   <h1>To do List</h1>
 
 <section class = 'main'>
-<input type ="text" class = 'list'>
+<input type ="text" class = 'listInput'>
 <button class ="sub">Submit</button>
+<button class ='clear'>Clear</button>
 </section>
 
 <section class ="answer">
-<ul>
-
-
+<ul id='list'>
 </ul>
 
 </section>
-
 
 
 
